# voip_project

./: CMakeLists.txt  readme.md
ext/opus/: .gitignore  CMakeLists.txt  config.h
ext/opus/celt/: CMakeLists.txt
ext/opus/silk/: CMakeLists.txt
ext/opus/src/: CMakeLists.txt
ext/opus/tests/: CMakeLists.txt
ext/rtaudio/tests/: teststops.cpp
ext/tclap/: README.md
src/: CMakeLists.txt  audio_buffer.cpp  audio_buffer.h  audio_decoder.cpp  audio_decoder.h  audio_encoder.cpp  audio_encoder.h  audio_mixer.cpp  audio_mixer.h  main.cpp  playout_buffer.cpp  playout_buffer.h  receiver.cpp  receiver.h  rtp_depacker.cpp  rtp_depacker.h  rtp_utils.cpp  rtp_utils.h  sender.cpp  sender.h  soundcard_interaction.cpp  soundcard_interaction.h  udp_socket.h  unix_udp_socket.cpp  voip_project.cpp  voip_project.h  windows_udp_socket.cpp
